libreoffice (1:7.0.1~rc1-2) UNRELEASED; urgency=medium

  * Merge from Ubuntu:
    - debian/rules:
      + Use gcc/g++-9 on armhf
    (only when running the tests, though)

 -- Rene Engelhard <rene@debian.org>  Sun, 23 Aug 2020 10:16:23 +0200

libreoffice (1:7.0.1~rc1-1) unstable; urgency=medium

  * New upstream release candidate

  * debian/rules: bump libnumbertext build-dep to 1.0.6 and use internal
    libnumbertext for buster-backports

 -- Rene Engelhard <rene@debian.org>  Fri, 07 Aug 2020 19:30:24 +0200

libreoffice (1:7.0.0-1) unstable; urgency=medium

  * New upstream release
    - reverts the "Personal edition" nonsense (closes: #965235)

  * debian/patches/no-opencl-per-default.diff: as name says, disable OpenCL
    per default. Prompted by
    https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=954849#41 ff.
  * debian/tests/control: use libreoffice-l10n-zh-tw instead of
    libreoffice-l10n-ja to test a xx-YY locale so that stuff like #964944
    is noticed.
  * debian/rules:
    - remove Education;Science; from libreoffice-math.desktop (closes: #965338) 
    - build-depend on qtchoser and export QT_SELECT_5 (again) for
      buster-backports

 -- Rene Engelhard <rene@debian.org>  Sun, 01 Aug 2020 15:02:40 +0200

libreoffice (1:7.0.0~rc2-1) unstable; urgency=medium

  * New upstream release candidate

  * debian/control*.in:
    - fix "compatibility" spelling and one s/package/library/ for consistency.
    - add explicit depends on liblibreoffice-java for documentation purposes
  * debian/rules:
    - symlink oo-ldap.xcd.sample and oo-ad-ldap.xcd.sample to
      in /etc/libreoffice/registry so that they are not hidden in
      /usr/lib/libreoffice/share/.registry
    - move /usr/lib/libreoffice/share/registry/README creation later in rules
      so that it doesn't get hidden in /usr/lib/libreoffice/share/.registry
    - fix adding the ucf snippets to zh-CN,zh-TW etc (closes: #964944)
    - update jh_classpath calls for libreoffice.jar
