@@ -235,8 +235,7 @@ Breaks: libreoffice-base (<< ${binary:Version}),
         libreoffice-pdfimport (<< 1:5.4~),
         libreoffice-common (<< 1:5.4.1),
         libreoffice-avmedia-backend-gstreamer (<< ${binary:Version})
-Conflicts: libreoffice-filter-binfilter, libreoffice-unbundled, libreoffice-avmedia-backend-vlc, libreoffice-mysql-connector (<< 1:6.2.0~), libreoffice-core-nogui
-Provides: libreoffice-bundled
+Conflicts: libreoffice-filter-binfilter, libreoffice-avmedia-backend-vlc, libreoffice-mysql-connector (<< 1:6.2.0~), libreoffice-core-nogui
 Replaces: libreoffice-pdfimport (<< 1:5.4~), libreoffice-common (<< 1:6.3.0~rc1~), libreoffice-avmedia-backend-gstreamer, libreoffice-core-nogui
 Description: office productivity suite -- arch-dependent files
  LibreOffice is a full-featured office productivity suite that provides
@@ -273,7 +272,7 @@ Breaks: libreoffice-base (<< ${binary:Version}),
         libreoffice-pdfimport (<< 1:5.4~),
         libreoffice-common (<< 1:5.4.1),
         libreoffice-avmedia-backend-gstreamer (<< ${binary:Version})
-Conflicts: libreoffice-filter-binfilter, libreoffice-unbundled, libreoffice-avmedia-backend-vlc, libreoffice-mysql-connector (<< 1:6.2.0~), libreoffice-core
+Conflicts: libreoffice-filter-binfilter, libreoffice-avmedia-backend-vlc, libreoffice-mysql-connector (<< 1:6.2.0~), libreoffice-core
 Provides: libreoffice-bundled
 Replaces: libreoffice-pdfimport (<< 1:5.4~), libreoffice-common (<< 1:6.3.0~rc1~), libreoffice-avmedia-backend-gstreamer, libreoffice-core
 Description: office productivity suite -- arch-dependent files (no GUI variant)
@@ -289,7 +288,7 @@ Architecture: all
 Depends: libreoffice-style-colibre, ure, ${numbertext-data-recommends}, ${misc:Depends}
 Suggests: libreoffice-style,
 Recommends: ${pyuno-depends}, ${textcat-data-recommends}, xdg-utils, fonts-liberation2 | ttf-mscorefonts-installer
-Conflicts: openoffice-unbundled,
+Conflicts: openoffice.org-unbundled,
            broffice,
            libreoffice-filter-mobiledev,
            libreoffice-l10n-4.3,
