@@ -1,5 +1,10 @@
 libreoffice (1:7.0.1~rc1-2) UNRELEASED; urgency=medium
 
+  * debian/control.in:
+    - fix Conflicts against *-unbundled, actually AOO still calls it
+      openoffice.org-unbundled and remove libreoffice-unbundled since it's
+      apparently not used anymore
+
   * Merge from Ubuntu:
     - debian/rules:
       + Use gcc/g++-9 on armhf
